--- a/styles/main.css
+++ b/styles/main.css
@@ -15,9 +15,14 @@ main {
     border-radius: 1.5rem;
     width: 30rem;
     height: 33rem;
+
     border: 2px solid var(--blue-500);
     align-items: center;
-    
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    overflow: hidden;
     
 
     & form {
@@ -25,6 +30,8 @@ main {
       align-items: center;
       flex-direction: column;
       gap: 5rem;
+      padding-top: 2rem;
+      padding-inline: 2rem;
 
       & label {
         display: flex;
@@ -43,6 +50,10 @@ main {
       flex-direction: column;
       gap: .5rem;
       width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
 
     }
   }
